<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/connected_text_1"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dev_1_disconnected"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/connected_text_2"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dev_2_disconnected"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/connected_text_3"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dev_3_disconnected"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonRed"
        android:text="@string/button_1_text"
        android:textColor="@color/color_button_text_red" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonGreen"
        android:text="@string/button_2_text"
        android:textColor="@color/color_button_text_green" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonBlue"
        android:text="@string/button_3_text"
        android:textColor="@color/color_button_text_blue" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonAuto"
        android:text="@string/button_4_text"
        android:textColor="@color/color_button_text_auto" />

    <TextView
        android:id="@+id/textOutput"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>